tests/core_tests/core_tests.exp
Error ----------------------------------------------------------------------------------------------------- map.js:23:21

Cannot call `Map` with array literal bound to `iterable` because:
 - string [1] is incompatible with tuple type [2] in type argument `Yield` [3] of the return value of property
   `@@iterator`.
 - number [4] is incompatible with tuple type [2] in type argument `Yield` [3] of the return value of property
   `@@iterator`.

   map.js:23:21
    23|     let x = new Map(['foo', 123]); // error
                            ^^^^^^^^^^^^

References:
   map.js:23:22
    23|     let x = new Map(['foo', 123]); // error
                             ^^^^^ [1]
   <BUILTINS>/core.js:530:37
   530|     constructor(iterable: ?Iterable<[K, V]>): void;
                                            ^^^^^^ [2]
   <BUILTINS>/core.js:484:22
   484| interface $Iterator<+Yield,+Return,-Next> {
                             ^^^^^ [3]
   map.js:23:29
    23|     let x = new Map(['foo', 123]); // error
                                    ^^^ [4]


Error ----------------------------------------------------------------------------------------------------- map.js:24:34

Cannot assign `new Map(...)` to `y` because:
 - string [1] is incompatible with number [2] in type argument `K` [3].
 - number [4] is incompatible with string [5] in type argument `V` [6].

   map.js:24:34
    24|     let y: Map<number, string> = new Map([['foo', 123]]); // error
                                         ^^^^^^^^^^^^^^^^^^^^^^^

References:
   map.js:24:44
    24|     let y: Map<number, string> = new Map([['foo', 123]]); // error
                                                   ^^^^^ [1]
   map.js:24:16
    24|     let y: Map<number, string> = new Map([['foo', 123]]); // error
                       ^^^^^^ [2]
   <BUILTINS>/core.js:528:19
   528| declare class Map<K, V> {
                          ^ [3]
   map.js:24:51
    24|     let y: Map<number, string> = new Map([['foo', 123]]); // error
                                                          ^^^ [4]
   map.js:24:24
    24|     let y: Map<number, string> = new Map([['foo', 123]]); // error
                               ^^^^^^ [5]
   <BUILTINS>/core.js:528:22
   528| declare class Map<K, V> {
                             ^ [6]


Error ------------------------------------------------------------------------------------------------------ map.js:29:6

Cannot cast `x.get(...)` to boolean because:
 - undefined [1] is incompatible with boolean [2].
 - number [3] is incompatible with boolean [2].

   map.js:29:6
    29|     (x.get('foo'): boolean); // error, string | void
             ^^^^^^^^^^^^

References:
   <BUILTINS>/core.js:535:22
   535|     get(key: K): V | void;
                             ^^^^ [1]
   map.js:29:20
    29|     (x.get('foo'): boolean); // error, string | void
                           ^^^^^^^ [2]
   map.js:28:27
    28|   function(x: Map<string, number>) {
                                  ^^^^^^ [3]


Error ----------------------------------------------------------------------------------------------------- map.js:30:11

Cannot call `x.get` with `123` bound to `key` because number [1] is incompatible with string [2].

   map.js:30:11
   30|     x.get(123); // error, wrong key type
                 ^^^ [1]

References:
   map.js:28:19
   28|   function(x: Map<string, number>) {
                         ^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- regexp.js:26:19

Cannot call `RegExp` with `'z'` bound to `flags` because string literal `z` [1] is incompatible with `RegExp$flags` [2]
since `z` is not a member of the set.

   regexp.js:26:19
    26|     RegExp('foo', 'z'); // error
                          ^^^ [1]

References:
   <BUILTINS>/core.js:334:21
   334| type RegExp$flags = $CharSet<"gimsuy">
                            ^^^^^^^^^^^^^^^^^^ [2]


Error -------------------------------------------------------------------------------------------------- regexp.js:27:23

Cannot call `RegExp` with `'z'` bound to `flags` because string literal `z` [1] is incompatible with `RegExp$flags` [2]
since `z` is not a member of the set.

   regexp.js:27:23
    27|     new RegExp('foo', 'z'); // error
                              ^^^ [1]

References:
   <BUILTINS>/core.js:334:21
   334| type RegExp$flags = $CharSet<"gimsuy">
                            ^^^^^^^^^^^^^^^^^^ [2]


Error ------------------------------------------------------------------------------------------------- weakset.js:19:23

Cannot call `WeakSet` with array literal bound to `iterable` because:
 - number [1] is incompatible with object type [2] in type argument `Yield` [3] of the return value of property
   `@@iterator`.
 - number [4] is incompatible with object type [2] in type argument `Yield` [3] of the return value of property
   `@@iterator`.
 - number [5] is incompatible with object type [2] in type argument `Yield` [3] of the return value of property
   `@@iterator`.

   weakset.js:19:23
    19| let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
                              ^^^^^^^^^

References:
   weakset.js:19:24
    19| let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
                               ^ [1]
   <BUILTINS>/core.js:568:26
   568| declare class WeakSet<T: Object> {
                                 ^^^^^^ [2]
   <BUILTINS>/core.js:484:22
   484| interface $Iterator<+Yield,+Return,-Next> {
                             ^^^^^ [3]
   weakset.js:19:27
    19| let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
                                  ^ [4]
   weakset.js:19:30
    19| let ws3 = new WeakSet([1, 2, 3]); // error, must be objects
                                     ^ [5]


Error ------------------------------------------------------------------------------------------------- weakset.js:36:23

Cannot call `WeakSet` with `numbers()` bound to `iterable` because number [1] is incompatible with object type [2] in
type argument `Yield` [3].

   weakset.js:36:23
    36| let ws5 = new WeakSet(numbers()); // error, must be objects
                              ^^^^^^^^^

References:
   weakset.js:29:31
    29| function* numbers(): Iterable<number> {
                                      ^^^^^^ [1]
   <BUILTINS>/core.js:568:26
   568| declare class WeakSet<T: Object> {
                                 ^^^^^^ [2]
   <BUILTINS>/core.js:490:22
   490| interface $Iterable<+Yield,+Return,-Next> {
                             ^^^^^ [3]



Found 13 errors
